--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Folder with the images – use images/images_folder_gen.py to generate such folder for yourself
+phone_cases_images/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -158,3 +161,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+.DS_Store
