implement data download from huggingface

--- a/.env_copy
+++ b/.env_copy
@@ -1,1 +1,4 @@
 INIT_FOLDER_PATH=D:\abo\images
+HUGGINGFACE_TOKEN="ask-fedor-for-token"
+HUGGINGFACE_TOPIC_MODEL_REPO="ask-fedor-for-path"
+HUGGINGFACE_DATASET_REPO="ask-fedor-for-path"
