massive repo clean up

--- a/.env_copy
+++ b/.env_copy
@@ -1,4 +1,9 @@
-INIT_FOLDER_PATH=D:\abo\images
 HUGGINGFACE_TOKEN="ask-fedor-for-token"
 HUGGINGFACE_TOPIC_MODEL_REPO="ask-fedor-for-path"
 HUGGINGFACE_DATASET_REPO="ask-fedor-for-path"
+HUGGINGFACE_DATASET_V2_REPO="ask-fedor-for-path"
+HUGGINGFACE_TOPIC_MODEL_TOP2VEC_REPO="ask-fedor-for-path"
+HUGGINGFACE_TOPIC_MODEL_TOP2VEC_FILE="ask-fedor-for-path"
+HUGGINGFACE_BASELINE_CNN_REPO="ask-fedor-for-path"
+HUGGINGFACE_BASELINE_CNN_CONFIG_FILE="ask-fedor-for-path"
+HUGGINGFACE_BASELINE_CNN_WEIGHTs_FILE="ask-fedor-for-path"
