--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-tensorflow==2.14.0
+bertopic==0.15.0
+datasets==2.14.6
 flwr==1.5.0
-pyOpenSSL==23.2.0
-cryptography==41.0.4
-scikit-learn==1.1.1
+huggingface_hub==0.15.1
+numpy==1.23.4
+opencv_python==4.6.0.66
+pandas==1.4.2
+scikit_learn==1.3.2
+tensorflow==2.14.0
+# tensorflow_macos==2.14.0
+top2vec==1.0.11
