implement launch of ec2 instances from python script

--- a/.env_copy
+++ b/.env_copy
@@ -7,3 +7,10 @@ HUGGINGFACE_TOPIC_MODEL_TOP2VEC_FILE="ask-fedor-for-path"
 HUGGINGFACE_BASELINE_CNN_REPO="ask-fedor-for-path"
 HUGGINGFACE_BASELINE_CNN_CONFIG_FILE="ask-fedor-for-path"
 HUGGINGFACE_BASELINE_CNN_WEIGHTs_FILE="ask-fedor-for-path"
+# Click AWS Details and expand AWS CLI in "Launch AWS Academy Learner Lab" window to get these credentials
+AWS_LAB_ACCESS_KEY="access-key-id-from-the-lab-on-aws-academy"
+AWS_LAB_SECRET_ACCESS_KEY="secret-access-key-from-the-lab-on-aws-academy"
+AWS_LAB_SESSION_TOKEN="session-token-from-the-lab-on-aws-academy"
+# copy-paste this one
+AWS_KEY_PAIR="FlowerKey"
+AWS_REGION="region-from-the-lab-on-aws-academy"
