--- a/flower-ec2/flower-dependencies/client/requirements.txt
+++ b/flower-ec2/flower-dependencies/client/requirements.txt
@@ -1,7 +1,9 @@
 flwr==1.5.0
 tensorflow==2.14.0
 jax==0.4.20
+jaxlib==0.4.20
 torch==2.0.1
+torchvision==0.15.2
 scikit_learn==1.3.0
 keras-core==0.1.7
 numpy==1.23.4
