--- a/flower-ec2/flower-dependencies/server/requirements.txt
+++ b/flower-ec2/flower-dependencies/server/requirements.txt
@@ -7,3 +7,7 @@ torchvision==0.15.2
 keras-core==0.1.7
 numpy==1.23.4
 typing==3.7.4.3
+boto3==1.21.26
+botocore==1.24.46
+pyyaml==6.0.1
+python-dotenv==1.0.0
