--- a/flower-ec2/aws_management/ec2_config.yaml
+++ b/flower-ec2/aws_management/ec2_config.yaml
@@ -1,6 +1,6 @@
 clients:
   ImageId: ami-05c13eab67c5d8861
-  InstanceType: t2.xlarge
+  InstanceType: t2.medium
   BlockDeviceMappings:
     - DeviceName: '/dev/sdh'
       Ebs:
@@ -9,7 +9,7 @@ clients:
 
 server:
   ImageId: ami-05c13eab67c5d8861
-  InstanceType: t2.xlarge
+  InstanceType: t2.small
   BlockDeviceMappings:
     - DeviceName: '/dev/sdh'
       Ebs:
